xserver-xorg-input-vmmouse (1:12.6.5-2) UNRELEASED; urgency=low

  * Build against Xserver 1.7.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Sat, 05 Dec 2009 02:06:47 +0200

xserver-xorg-input-vmmouse (1:12.6.5-1) unstable; urgency=low

  * New upstream release.
  * Bump Standards-Version to 3.8.3 now that we have README.source.

 -- Brice Goglin <bgoglin@debian.org>  Fri, 04 Sep 2009 14:29:46 +0200

xserver-xorg-input-vmmouse (1:12.6.4-1) unstable; urgency=low

  * New upstream release.

 -- Brice Goglin <bgoglin@debian.org>  Mon, 11 May 2009 20:13:16 +0200

xserver-xorg-input-vmmouse (1:12.6.3-2) unstable; urgency=low

  * Upload to unstable.

 -- Julien Cristau <jcristau@debian.org>  Thu, 09 Apr 2009 16:35:55 +0100

xserver-xorg-input-vmmouse (1:12.6.3-1) experimental; urgency=low

  * New upstream release.
  * Drop patch vmmouse_scale_input_data.diff, it's been fixed upstream a while
    back.
  * Run autoreconf at build time.  Build-depend on automake, libtool and
    xutils-dev.
  * Handle parallel builds.
  * Install a detection program, a hal fdi file and a callout script for X
    input hotplug.  This closes: #509053, since the vmmouse no longer needs to
    be configured in xorg.conf.
  * Don't override the manpage suffix, it should be vmmouse(4) not
    vmmouse(4x).
  * Build against xserver 1.6 rc1.
  * Add myself to Uploaders.
  * Add Depends on xserver-xorg-input-mouse (closes: #509458)

 -- Julien Cristau <jcristau@debian.org>  Fri, 30 Jan 2009 22:30:11 +0100

xserver-xorg-input-vmmouse (1:12.5.1-4) unstable; urgency=low

  * I need a brown paper bag; autoreconf so the patch added in -3 is actually
    used…

 -- Julien Cristau <jcristau@debian.org>  Tue, 21 Oct 2008 10:48:19 +0200

xserver-xorg-input-vmmouse (1:12.5.1-3) unstable; urgency=low

  * Cherry-pick from upstream: Properly set axis range and resolution for
    Server 1.5+ (closes: #490912).

 -- Julien Cristau <jcristau@debian.org>  Sat, 18 Oct 2008 10:55:07 +0200
